--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1>I'm Madison Martinez</h1>
                 <p class="lead"></p>
             </div>
-            <h1 class="welcome">Let's go on an Adventure</h1>
+            <h1 class="welcome red-text text-accent-3">Let's go on an Adventure</h1>
         </div>
         </div>
     </header>
@@ -45,7 +45,7 @@
     <section id="about" class="valign-wrapper">
         <div class="container">
             <div class="row">
-                <div class="col l6 col m6 col s6">
+                <div class="col l6 m6 s12">
                     <p>My name is Madison Martinez and I'm a full-stack web developer.</p>
                     <p>I'm coming to this industry with a decade of experience in customer service and general
                         management. I am passionate about using and making techonology that aims to simplify our lives.
@@ -59,7 +59,7 @@
                             href="assets/images/TechResumeMadison.png">
                             Care to see my resume? Click here!</p></a>
                 </div>
-                <div class="col l6 col m6 col s6">
+                <div class="col l6 col m6 col s12">
                     <img src="assets/images/me.jpg" class="circle responsive-img" alt="profile">
                 </div>
             </div>
@@ -116,7 +116,7 @@
         <div class="container">
             <div class="row separator"></div>
             <div class="row">
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/14615615_10210840441269874_172626111176204465_o.jpg" alt="iceland">
                     </div>
@@ -132,7 +132,7 @@
                         <p>Tech Used: Skeleton, Google Map API, Dark Sky API, US Muncipal API, CSS, Javascript</p>
                     </div>
                 </div>
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/22550363_10214572717334443_1536132551494464327_o.jpg" alt="berlin">
                     </div>
@@ -150,7 +150,7 @@
                             </p>
                     </div>
                 </div>
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/33894485_10216542863106856_1813180380275015680_o.jpg" alt="london">
                     </div>
@@ -168,7 +168,7 @@
                 </div>
             </div>
                 <div class="row">
-                    <div class="card medium col l4 m4 s6">
+                    <div class="card medium col l4 m4 s12">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator responsive-img" src="assets/images/41457242_10217415255916131_5720614542388494336_n.jpg" alt="hawaii">
                         </div>
@@ -184,7 +184,7 @@
                             <p>Tech Used: HTML, Bootstrap, JavaScript, jQuery, Firebase and Moment</p>
                         </div>
                     </div>
-                    <div class="card medium col l4 m4 s6">
+                    <div class="card medium col l4 m4 s12">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator responsive-img" src="assets/images/59295506_10219287122391623_2294325371509669888_o.jpg" alt="iceland">
                         </div>
@@ -201,7 +201,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="card medium col l4 m4 s6">
+                    <div class="card medium col l4 m4 s12">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator responsive-img" src="assets/images/florence.jpg" alt="florence">
                         </div>
@@ -218,7 +218,7 @@
                     </div>
                 </div>
             <div class="row">
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/capri2.jpg" alt="capri">
                     </div>
@@ -233,7 +233,7 @@
                         <p>Liri searches Spotify, Bands in Town or OMDB for all of your infomation needs. To get started, simply open the main file using your terminal and node.js like so (node liri.js) and type a command!</p><p> Tech Used: NodeJS, JavaScript, Spotify NPM package, Bands in Town API, OMDB API, NPM Axios, NPM dotenv, Moment NPM package</p>
                     </div>
                 </div>
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/53899624_10218868202478887_9008797416366800896_o.jpg" alt="italy">
                     </div>
@@ -249,7 +249,7 @@
                         <p>Using the Giphy API, jQuery, and JavaScript, this page allows you to click the buttons at the top to bring up related gifs!</p>
                     </div>
                 </div>
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/53913898_10218890146027462_1937774873271074816_o.jpg" alt="trees">
                     </div>
@@ -267,7 +267,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                     <div class="card-image waves-effect waves-block waves-light">
                         <img class="activator responsive-img" src="assets/images/rome.jpg" alt="rome">
                     </div>
@@ -283,7 +283,7 @@
                         <p>Tech Used: Node JS, Express, Handlebars, MySQL, ORM (Object Relational Mapping, jQuery and AJAX, Materialize and Custom CSS</p>
                     </div>
                 </div>
-                <div class="card medium col l4 m4 s6">
+                <div class="card medium col l4 m4 s12">
                         <div class="card-image waves-effect waves-block waves-light">
                             <img class="activator responsive-img" src="assets/images/59752483_10219287117191493_5654765229087653888_o.jpg" alt="puffin">
                         </div>
