--- a/index.html
+++ b/index.html
@@ -288,15 +288,15 @@
                             <img class="activator responsive-img" src="assets/images/59752483_10219287117191493_5654765229087653888_o.jpg" alt="puffin">
                         </div>
                         <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Crystal Collector<i
+                            <span class="card-title activator grey-text text-darken-4">Coffee Scraper<i
                                     class="material-icons right">more_vert</i></span>
-                            <p><a href="https://amadisonm1209.github.io/unit-4-game/" target="_blank">Deployed Project</a></p>
-                            <p><a href="https://github.com/amadisonm1209/unit-4-game" target="_blank">GitHub Repo</a></p>
+                            <p><a href="https://obscure-shelf-20163.herokuapp.com" target="_blank">Deployed Project</a></p>
+                            <p><a href="https://github.com/amadisonm1209/MongoHW" target="_blank">GitHub Repo</a></p>
                         </div>
                         <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Crystal Collector<i
+                            <span class="card-title grey-text text-darken-4">Coffee Scraper<i
                                     class="material-icons right">close</i></span>
-                            <p>Tech Used: HTML, CSS, JavaScript, jQuery</p>
+                            <p>Tech Used: Express, Handlebars, MongoDB, Mongoose, Axios, Cheerio, Ajax, jQuery, JavaScript, Materialize </p>
                         </div>
                     </div>
             </div>
